==> turris-cz/omnia_hw_ctrl/src/platform/gd32/eeprom.c <==
#include "eeprom.h"
#include "debug.h"
#include "gd32f1x0_fmc.h"

uint16_t EE_Init(void)
{
  uint16_t PageStatus0 = 6, PageStatus1 = 6;
  uint16_t VarIdx = 0;
  uint16_t EepromStatus = 0, ReadStatus = 0;
  int16_t x = -1;
  fmc_state_enum fmc_state;

  /* Get Page0 status */
  PageStatus0 = (*(__IO uint16_t*)PAGE0_BASE_ADDRESS);
  /* Get Page1 status */
  PageStatus1 = (*(__IO uint16_t*)PAGE1_BASE_ADDRESS);

  /* Check for invalid header states and repair if necessary */
  switch (PageStatus0)
  {
    case ERASED:
      if (PageStatus1 == VALID_PAGE) /* Page0 erased, Page1 valid */
      {
        /* Erase Page0 */
        fmc_state = fmc_page_erase(PAGE0_BASE_ADDRESS);
        /* If erase operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      else if (PageStatus1 == RECEIVE_DATA) /* Page0 erased, Page1 receive */
      {
        /* Erase Page0 */
        fmc_state = fmc_page_erase(PAGE0_BASE_ADDRESS);
        /* If erase operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
        /* Mark Page1 as valid */
        fmc_state = fmc_halfword_program(PAGE1_BASE_ADDRESS, VALID_PAGE);
        /* If program operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      else /* First EEPROM access (Page0&1 are erased) or invalid state -> format EEPROM */
      {
        /* Erase both Page0 and Page1 and set Page0 as valid page */
        fmc_state = EE_Format();
        /* If erase/program operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      break;

    case RECEIVE_DATA:
      if (PageStatus1 == VALID_PAGE) /* Page0 receive, Page1 valid */
      {
        /* Transfer data from Page1 to Page0 */
        for (VarIdx = 0; VarIdx < NB_OF_VAR; VarIdx++)
        {
          if (( *(__IO uint16_t*)(PAGE0_BASE_ADDRESS + 6)) == VirtAddVarTab[VarIdx])
          {
            x = VarIdx;
          }
          if (VarIdx != x)
          {
            /* Read the last variables' updates */
            ReadStatus = EE_ReadVariable(VirtAddVarTab[VarIdx], &DataVar);
            /* In case variable corresponding to the virtual address was found */
            if (ReadStatus != 0x1)
            {
              /* Transfer the variable to the Page0 */
              EepromStatus = EE_VerifyPageFullWriteVariable(VirtAddVarTab[VarIdx], DataVar);
              /* If program operation was failed, a Flash error code is returned */
              if (EepromStatus != FMC_READY)
              {
                return EepromStatus;
              }
            }
          }
        }
        /* Mark Page0 as valid */
        fmc_state = fmc_halfword_program(PAGE0_BASE_ADDRESS, VALID_PAGE);
        /* If program operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
        /* Erase Page1 */
        fmc_state = fmc_page_erase(PAGE1_BASE_ADDRESS);
        /* If erase operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      else if (PageStatus1 == ERASED) /* Page0 receive, Page1 erased */
      {
        /* Erase Page1 */
        fmc_state = fmc_page_erase(PAGE1_BASE_ADDRESS);
        /* If erase operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
        /* Mark Page0 as valid */
        fmc_state = fmc_halfword_program(PAGE0_BASE_ADDRESS, VALID_PAGE);
        /* If program operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      else /* Invalid state -> format eeprom */
      {
        /* Erase both Page0 and Page1 and set Page0 as valid page */
        fmc_state = EE_Format();
        /* If erase/program operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      break;

    case VALID_PAGE:
      if (PageStatus1 == VALID_PAGE) /* Invalid state -> format eeprom */
      {
        /* Erase both Page0 and Page1 and set Page0 as valid page */
        fmc_state = EE_Format();
        /* If erase/program operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      else if (PageStatus1 == ERASED) /* Page0 valid, Page1 erased */
      {
        /* Erase Page1 */
        fmc_state = fmc_page_erase(PAGE1_BASE_ADDRESS);
        /* If erase operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      else /* Page0 valid, Page1 receive */
      {
        /* Transfer data from Page0 to Page1 */
        for (VarIdx = 0; VarIdx < NB_OF_VAR; VarIdx++)
        {
          if ((*(__IO uint16_t*)(PAGE1_BASE_ADDRESS + 6)) == VirtAddVarTab[VarIdx])
          {
            x = VarIdx;
          }
          if (VarIdx != x)
          {
            /* Read the last variables' updates */
            ReadStatus = EE_ReadVariable(VirtAddVarTab[VarIdx], &DataVar);
            /* In case variable corresponding to the virtual address was found */
            if (ReadStatus != 0x1)
            {
              /* Transfer the variable to the Page1 */
              EepromStatus = EE_VerifyPageFullWriteVariable(VirtAddVarTab[VarIdx], DataVar);
              /* If program operation was failed, a Flash error code is returned */
              if (EepromStatus != FMC_READY)                                       // TODO - zkontrolovat
              {
                return EepromStatus;
              }
            }
          }
        }
        /* Mark Page1 as valid */
        fmc_state = fmc_halfword_program(PAGE1_BASE_ADDRESS, VALID_PAGE);
        /* If program operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
        /* Erase Page0 */
        fmc_state = fmc_page_erase(PAGE0_BASE_ADDRESS);
        /* If erase operation was failed, a Flash error code is returned */
        if (fmc_state != FMC_READY)
        {
          return fmc_state;
        }
      }
      break;

    default:  /* Any other state -> format eeprom */
      /* Erase both Page0 and Page1 and set Page0 as valid page */
      fmc_state = EE_Format();
      /* If erase/program operation was failed, a Flash error code is returned */
      if (fmc_state != FMC_READY)
      {
        return fmc_state;
      }
      break;
  }

  return FLASH_COMPLETE;                                        // TODO - nastavit spravnou navratovou hodnotu
}

static fmc_state_enum EE_Format(void)
{
  fmc_state_enum fmc_state;

  /* Erase Page0 */
  fmc_state = fmc_page_erase(PAGE0_BASE_ADDRESS);

  /* If erase operation was failed, a Flash error code is returned */
  if (fmc_state != FMC_READY)
  {
    return fmc_state;
  }

  /* Set Page0 as valid page: Write VALID_PAGE at Page0 base address */
  fmc_state = fmc_halfword_program(PAGE0_BASE_ADDRESS, VALID_PAGE);

  /* If program operation was failed, a Flash error code is returned */
  if (fmc_state != FMC_READY)
  {
    return fmc_state;
  }

  /* Erase Page1 */
  fmc_state = fmc_page_erase(PAGE1_BASE_ADDRESS);

  /* Return Page1 erase operation status */
  return fmc_state;
}

static uint16_t EE_VerifyPageFullWriteVariable(uint16_t VirtAddress, uint16_t Data)
{
  fmc_state_enum fmc_state;
  uint16_t ValidPage = PAGE0;
  uint32_t Address = 0x08010000, PageEndAddress = 0x080107FF;

  /* Get valid Page for write operation */
  ValidPage = EE_FindValidPage(WRITE_IN_VALID_PAGE);

  /* Check if there is no valid page */
  if (ValidPage == NO_VALID_PAGE)
  {
    return  NO_VALID_PAGE;
  }

  /* Get the valid Page start Address */
  Address = (uint32_t)(EEPROM_START_ADDRESS + (uint32_t)(ValidPage * PAGE_SIZE));

  /* Get the valid Page end Address */
  PageEndAddress = (uint32_t)((EEPROM_START_ADDRESS - 2) + (uint32_t)((1 + ValidPage) * PAGE_SIZE));

  /* Check each active page address starting from begining */
  while (Address < PageEndAddress)
  {
    /* Verify if Address and Address+2 contents are 0xFFFFFFFF */
    if ((*(__IO uint32_t*)Address) == 0xFFFFFFFF)
    {
      /* Set variable data */
      fmc_state = fmc_halfword_program(Address, Data);
      /* If program operation was failed, a Flash error code is returned */
      if (fmc_state != FMC_READY)
      {
        return fmc_state;
      }
      /* Set variable virtual address */
      fmc_state = fmc_halfword_program(Address + 2, VirtAddress);
      /* Return program operation status */
      return fmc_state;
    }
    else
    {
      /* Next address location */
      Address = Address + 4;
    }
  }

  /* Return PAGE_FULL in case the valid page is full */
  return PAGE_FULL;
}

static uint16_t EE_PageTransfer(uint16_t VirtAddress, uint16_t Data)
{
  fmc_state_enum fmc_state;
  uint32_t NewPageAddress = 0x080103FF, OldPageAddress = 0x08010000;
  uint16_t ValidPage = PAGE0, VarIdx = 0;
  uint16_t EepromStatus = 0, ReadStatus = 0;

  /* Get active Page for read operation */
  ValidPage = EE_FindValidPage(READ_FROM_VALID_PAGE);

  if (ValidPage == PAGE1)       /* Page1 valid */
  {
    /* New page address where variable will be moved to */
    NewPageAddress = PAGE0_BASE_ADDRESS;

    /* Old page address where variable will be taken from */
    OldPageAddress = PAGE1_BASE_ADDRESS;
    debug("PAGE1 VALID\n");
  }
  else if (ValidPage == PAGE0)  /* Page0 valid */
  {
    /* New page address where variable will be moved to */
    NewPageAddress = PAGE1_BASE_ADDRESS;

    /* Old page address where variable will be taken from */
    OldPageAddress = PAGE0_BASE_ADDRESS;
    debug("PAGE0 VALID\n");
  }
  else
  {
    debug("NO VALID PAGE\n");
    return NO_VALID_PAGE;       /* No valid Page */
  }

  /* Set the new Page status to RECEIVE_DATA status */
  fmc_state = fmc_halfword_program(NewPageAddress, RECEIVE_DATA);
  /* If program operation was failed, a Flash error code is returned */
  if (fmc_state != FMC_READY)
  {
    return fmc_state;
  }

  /* Write the variable passed as parameter in the new active page */
  EepromStatus = EE_VerifyPageFullWriteVariable(VirtAddress, Data);
  /* If program operation was failed, a Flash error code is returned */
  if (EepromStatus != FMC_READY)
  {
    return EepromStatus;
  }

  /* Transfer process: transfer variables from old to the new active page */
  for (VarIdx = 0; VarIdx < NB_OF_VAR; VarIdx++)
  {
    if (VirtAddVarTab[VarIdx] != VirtAddress)  /* Check each variable except the one passed as parameter */
    {
      /* Read the other last variable updates */
      ReadStatus = EE_ReadVariable(VirtAddVarTab[VarIdx], &DataVar);
      /* In case variable corresponding to the virtual address was found */
      if (ReadStatus != 0x1)
      {
        /* Transfer the variable to the new active page */
        EepromStatus = EE_VerifyPageFullWriteVariable(VirtAddVarTab[VarIdx], DataVar);
        /* If program operation was failed, a Flash error code is returned */
        if (EepromStatus != FMC_READY)
        {
          return EepromStatus;
        }
      }
    }
  }

  /* Erase the old Page: Set old Page status to ERASED status */
  fmc_state = fmc_page_erase(OldPageAddress);
  /* If erase operation was failed, a Flash error code is returned */
  if (fmc_state != FMC_READY)
  {
    return fmc_state;
  }

  /* Set new Page status to VALID_PAGE status */
  fmc_state = fmc_halfword_program(NewPageAddress, VALID_PAGE);
  /* If program operation was failed, a Flash error code is returned */
  if (fmc_state != FMC_READY)
  {
    return fmc_state;
  }

  /* Return last operation flash status */
  return fmc_state;
}
